--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Hugo Rosa, Joao P. Carvalho, Pavel Calado, Bruno Martins, Ricardo Ribeiro, and Luisa Coheur <i>Using Fuzzy Fingerprints for Cyberbullying Detection in Social Networks</i>, Proceedings of the IEEE International Conference on Fuzzy Systems, 2018 [<a href="">PDF</a>]</li>
 <li>Nuno Freire, Bruno Martins, and Pável Calado <i>Provision of cultural heritage metadata for Internet search engines: current practices and survey of technology</i>, Proceedings of the International Conference on Electronic Publishing, 2018 [<a href="">PDF</a>]</li>
 <li>Rui Santos, Patricia Murrieta-Flores, and Bruno Martins, <i>Combining String Matching and Cost Minimization Algorithms for Automatically Geocoding Tabular Itineraries</i>, Proceedings of the Digital Humanities Conference, 2018 [<a href="">PDF</a>]</li>
 <li>João Monteiro, Bruno Martins, Patricia Murrieta-Flores, and João M. Pires, <i>Spatial Disaggregation of Historical Census Data Leveraging Multiple Sources of Ancillary Data</i>, Proceedings of the Digital Humanities Conference, 2018 [<a href="">PDF</a>]</li>
