--- a/index.html
+++ b/index.html
@@ -752,6 +752,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
 						<a href="https://scholar.google.com/citations?user=yyYfPJ8AAAAJ&hl=en">Gustavo Laboreiro</a> |
 						<a href="https://www.researchgate.net/profile/Zhaochen_Guo">Zhaochen Guo</a> | 
 						<!-- <a href="https://www.l2f.inesc-id.pt/w/Paula_Cristina_Vaz_Lobo">Paula Vaz</a> | -->
