--- a/index.html
+++ b/index.html
@@ -744,6 +744,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Project reviewer: </strong>
+						<a href="https://royalsociety.org.nz/what-we-do/funds-and-opportunities/rutherford-discovery-fellowships/">Rutherford Discovery Fellowships</a>
 						<a href="http://www.snf.ch/">Swiss National Science Foundation</a>
 					</li></ul>
 					</td>
