--- a/index.html
+++ b/index.html
@@ -641,6 +641,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.geo.uzh.ch/~rsp/gir18/">GIR'18</a> |
 						<a href="http://sigspatial2018.sigspatial.org">SIGSPATIAL'18</a> |
 						<a href="http://www.tpdl.eu/tpdl2018/">TPDL'18</a> |
 						<a href="http://www.kdd.org/kdd2018/">KDD'18</a> |
