--- a/index.html
+++ b/index.html
@@ -332,6 +332,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Nuno Ramanlal, Luís Freixinho, João Monteiro, Patricia Murrieta-Flores, João Moura Pires, and Bruno Martins, <i>Machine Learning for Processing of Historical Photos Envisioning Spatial Humanities Applications</i>, Proceedings of the Spatial Humanities Conference, 2018 [<a href="">PDF</a>]</li>
+<li>Raquel Liceras-Garrido, Bruno Martins, and Patricia Murrieta-Flores, <i>Development of an Historical Place-Name Gazetteer for the Viceroyalty of New Spain</i>, Proceedings of the Spatial Humanities Conference, 2018 [<a href="">PDF</a>]</li>
 <li>Hugo Rosa, Joao P. Carvalho, Pavel Calado, Bruno Martins, Ricardo Ribeiro, and Luisa Coheur <i>Using Fuzzy Fingerprints for Cyberbullying Detection in Social Networks</i>, Proceedings of the IEEE International Conference on Fuzzy Systems, 2018 [<a href="">PDF</a>]</li>
 <li>Nuno Freire, Bruno Martins, and Pável Calado <i>Provision of cultural heritage metadata for Internet search engines: current practices and survey of technology</i>, Proceedings of the International Conference on Electronic Publishing, 2018 [<a href="">PDF</a>]</li>
 <li>Rui Santos, Patricia Murrieta-Flores, and Bruno Martins, <i>Combining String Matching and Cost Minimization Algorithms for Automatically Geocoding Tabular Itineraries</i>, Proceedings of the Digital Humanities Conference, 2018 [<a href="">PDF</a>]</li>
@@ -641,6 +643,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://udi.ornl.gov/geoai">GeoAI'18</a> |
 						<a href="http://www.geo.uzh.ch/~rsp/gir18/">GIR'18</a> |
 						<a href="http://sigspatial2018.sigspatial.org">SIGSPATIAL'18</a> |
 						<a href="http://www.tpdl.eu/tpdl2018/">TPDL'18</a> |
