--- a/index.html
+++ b/index.html
@@ -643,6 +643,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://emnlp2018.org">EMNLP'18</a> |
 						<a href="https://udi.ornl.gov/geoai">GeoAI'18</a> |
 						<a href="http://www.geo.uzh.ch/~rsp/gir18/">GIR'18</a> |
 						<a href="http://sigspatial2018.sigspatial.org">SIGSPATIAL'18</a> |
