--- a/index.html
+++ b/index.html
@@ -601,6 +601,10 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
 			<li>Luis Santos, <a href=""><i>Named Entity Recognition over Historical Documents</i></a>, IST, 2018 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
 			<li>Ângela Ferreira, <a href=""><i>Question generation with deep neural networks</i></a>, IST, 2018 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
+
+			<li>Ana Bárbara Cardoso, <a href=""><i>Resolução de nomes de locais em documentos de texto</i></a>, IST, 2019 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- ?? valores -->
+			<li>Liliana Oliveira, <a href=""><i>Classificação automática de causas de mortalidade de acordo com a norma ICD-10</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
+			<li>Nelson Nunes, <a href=""><i>Deep learning para classificação automática de relatórios de radiologia</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->			
 			</ul>
 		</td>
     </tr>
