--- a/index.html
+++ b/index.html
@@ -788,6 +788,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEEC-JCARVALHO-RAMON">João Pedro Lages</a> |
 						<a href="DEI-AMARQUES-PROJECTO">Rui Santos</a> |
 						<a href="DEI-MAMEDE-PROJECTO">Valentyn Hulevych</a> |
 						<a href="DEI-DIOGO-PROJECTO">João Vicente</a> |
