--- a/index.html
+++ b/index.html
@@ -480,6 +480,8 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
+<li>MIning MUlti-source and MUlti-modal geo-referenced information (MIMU - FCT 32607/2017 - Principal Investigator)</li>
+<li>Streams of hate and untruth? Using online comments, posts and tweets to investigate attitudes and the quality of political debates (HATE - FCT 29369/2017)</li>	
 <li>Curating and assimilating crowdsourced and authoritative data to reduce uncertainty in river flow modeling (RiverCure - FCT 29360/2017)</li>
 <li><a href="https://diggingintodata.org/awards/2016/project/digging-early-colonial-mexico">Digging into Early Colonial Mexico: A large-scale computational analysis of 16th century historical sources (DigCH - T-AP HJ-253525)</a></li>
 <li><a href="http://www.republicofletters.net">Reassembling the Republic of Letters (COST ACTION IS1310)</a></li>
