--- a/index.html
+++ b/index.html
@@ -649,6 +649,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.inf.ufrgs.br/propor-2018/">PROPOR'18</a> |
 						<a href="http://emnlp2018.org">EMNLP'18</a> |
 						<a href="https://udi.ornl.gov/geoai">GeoAI'18</a> |
 						<a href="http://www.geo.uzh.ch/~rsp/gir18/">GIR'18</a> |
