--- a/index.html
+++ b/index.html
@@ -607,6 +607,9 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Ana Bárbara Cardoso, <a href=""><i>Resolução de nomes de locais em documentos de texto</i></a>, IST, 2019 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- ?? valores -->
 			<li>Liliana Oliveira, <a href=""><i>Classificação automática de causas de mortalidade de acordo com a norma ICD-10</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
 			<li>Nelson Nunes, <a href=""><i>Deep learning para classificação automática de relatórios de radiologia</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->			
+			<li>Maria Dias, <a href=""><i>Deep learning para a quantificação da valência e intensidade de emoções expressas em língua natural</i></a>, IST, 2019 (<i>co-supervised with João Monteiro</i>)</li> <!-- ?? valores -->
+			<li>Sofia Aparício, <a href=""><i>Segmentação de imagens de satélite com redes neuronais profundas</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2019 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
