--- a/index.html
+++ b/index.html
@@ -610,6 +610,9 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Maria Dias, <a href=""><i>Deep learning para a quantificação da valência e intensidade de emoções expressas em língua natural</i></a>, IST, 2019 (<i>co-supervised with João Monteiro</i>)</li> <!-- ?? valores -->
 			<li>Sofia Aparício, <a href=""><i>Segmentação de imagens de satélite com redes neuronais profundas</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2019 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
+			<li>Pedro Caldeira, <a href=""><i>Reconhecimento e desambiguação de entidades em textos clínicos</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
+			<li>Mário Reis, <a href=""><i>Delimitação de regiões geográficas e integração de dados para construção de gazetteers</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+				
 			</ul>
 		</td>
     </tr>
