--- a/index.html
+++ b/index.html
@@ -585,10 +585,10 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Rui Figueira, <a href=""><i>Datação Automática de Documentos Textuais</i></a>, IST, 2017 (<i>co-supervised with Dr. Daniel Gomes</i>)</li> <!-- 17 valores -->
 			<li>Barbara Pinho, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/1972678479053871"><i>SleepData - A sleep disorders clinical database</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 18 valores -->
 			<li>Tiago Castanheira, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/565303595501663"><i>SleepData - A study on sleep disorders</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 18 valores -->
-
+			<li>Frederico Rodrigues, <a href=""><i>Sumarização Automática de Documentos Através de Algoritmos Genéticos</i></a>, IST, 2018 (<i>co-supervised with Prof. Ricardo Ribeiro</i>)</li> <!-- ?? valores -->
+				
 			<li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> <!-- ?? valores -->
 			<li>Paulo Alves, <a href=""><i>Extracção de argumentos desde documentos textuais</i></a>, IST, 2018 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
-			<li>Frederico Rodrigues, <a href=""><i>Sumarização Automática de Documentos Através de Algoritmos Genéticos</i></a>, IST, 2018 (<i>co-supervised with Prof. Ricardo Ribeiro</i>)</li> <!-- ?? valores -->
 			<li>Miguel Vieira, <a href=""><i>Vigilância Epidemiológica de Eventos de Massas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>Nuno Ramanlal, <a href=""><i>Atribuição automática de coordenadas geo-espaciais a fotos em arquivos históricos</i></a>, IST, 2018 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- ?? valores -->
 			<li>Bernardo Casaleiro, <a href=""><i>Desambiguação de etiquetas morfossintáticas com redes neuronais recorrentes e word embeddings</i></a>, IST, 2018 (<i>co-supervised with Prof. Nuno Mamede</i>)</li> <!-- ?? valores -->
@@ -612,7 +612,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2019 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
 			<li>Pedro Caldeira, <a href=""><i>Reconhecimento e desambiguação de entidades em textos clínicos</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>Mário Reis, <a href=""><i>Delimitação de regiões geográficas e integração de dados para construção de gazetteers</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-				
+			<li>Veniamin Craciun, <a href=""><i>Sistema de Recomendação em Análise de Risco em Saúde Mental Pediátrica</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->				
 			</ul>
 		</td>
     </tr>
