--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Rui Figueira, <a href=""><i>Datação Automática de Documentos Textuais</i></a>, IST, 2017 (<i>co-supervised with Dr. Daniel Gomes</i>)</li> <!-- 17 valores -->
 			<li>Barbara Pinho, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/1972678479053871"><i>SleepData - A sleep disorders clinical database</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 18 valores -->
 			<li>Tiago Castanheira, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/565303595501663"><i>SleepData - A study on sleep disorders</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 18 valores -->
-			<li>Frederico Rodrigues, <a href=""><i>Sumarização Automática de Documentos Através de Algoritmos Genéticos</i></a>, IST, 2018 (<i>co-supervised with Prof. Ricardo Ribeiro</i>)</li> <!-- ?? valores -->
+			<li>Frederico Rodrigues, <a href=""><i>Neural Methods for Cross-Lingual Sentence Compression</i></a>, IST, 2018 (<i>co-supervised with Prof. Ricardo Ribeiro</i>)</li> <!-- 17 valores -->
 				
 			<li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> <!-- ?? valores -->
 			<li>Paulo Alves, <a href=""><i>Extracção de argumentos desde documentos textuais</i></a>, IST, 2018 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
@@ -645,6 +645,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of editorial committees: </strong>
+						<a href="">GeoJournal - Special Issue on Spatial Humanities</a> |
 						<a href="http://explore.tandfonline.com/pages/cfp/tgis-spatial-computing-3q2017?utm_source=CPB&utm_medium=cms&utm_campaign=JMG01510">International Journal of Geographical Information Science - Special Issue on Spatial Computing for the Digital Humanities</a> |
 						<a href="http://www.mdpi.com/journal/information/editors/">Information</a> |
 						<a href="http://www.springer.com/cda/content/document/cda_downloaddocument/SI_Environmental+and+Geospatial+Data+Analytics.pdf?SGWID=0-0-45-1578169-p177383280">International Journal of Data Science and Analytics - Special Issue on Environmental and Geospatial Data Analytics</a>
@@ -655,6 +656,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://dsaa2018.isi.it/program/special-sessions/en-geo-data">IEEE DSAA'18 - EnGeoData</a> |
+						<a href="http://www.spur.uzh.ch/de/veranstaltungen/workshops/2018/Corpus-in-GIScience-Going-Beyond-Butterfly-Collecting.html">Corpus in GIS Science</a> |
 						<a href="http://www.inf.ufrgs.br/propor-2018/">PROPOR'18</a> |
 						<a href="http://emnlp2018.org">EMNLP'18</a> |
 						<a href="https://udi.ornl.gov/geoai">GeoAI'18</a> |
