--- a/index.html
+++ b/index.html
@@ -801,12 +801,15 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
-						<a href="DEEC-JCARVALHO-RAMON">João Pedro Lages</a> |
+						<a href="DEI-ANDRE-PROJECTO">Inês Ferreira</a> |
+						<a href="DEI-LUISA-PROJECTO">Ricardo Rei</a> |
 						<a href="DEI-AMARQUES-PROJECTO">Rui Santos</a> |
 						<a href="DEI-MAMEDE-PROJECTO">Valentyn Hulevych</a> |
 						<a href="DEI-DIOGO-PROJECTO">João Vicente</a> |
 						<a href="DEI-LUISA-PROJECTO">Margarida Correia</a> |
 						<a href="DEI-PAVEL-PROJECTO">Ricardo Pereira</a> |
+						<a href="DEI-LUISA">Miguel Ângelo Ventura</a> |												
+						<a href="DEEC-JCARVALHO-RAMON">João Pedro Lages</a> |
 						<a href="DEEC">Pedro Ferreira</a> |
 						<a href="FCUL">Cláudio Vieira</a> |
 						<a href="IST">Ricardo Abreu</a> |
