--- a/index.html
+++ b/index.html
@@ -613,6 +613,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Pedro Caldeira, <a href=""><i>Reconhecimento e desambiguação de entidades em textos clínicos</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>Mário Reis, <a href=""><i>Delimitação de regiões geográficas e integração de dados para construção de gazetteers</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Veniamin Craciun, <a href=""><i>Sistema de Recomendação em Análise de Risco em Saúde Mental Pediátrica</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->				
+			<li>Jorge Pereira, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->	
 			</ul>
 		</td>
     </tr>
