--- a/index.html
+++ b/index.html
@@ -481,9 +481,11 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
-<li>MIning MUlti-source and MUlti-modal geo-referenced information (MIMU - FCT 32607/2017 - Principal Investigator)</li>
-<li>Streams of hate and untruth? Using online comments, posts and tweets to investigate attitudes and the quality of political debates (HATE - FCT 29369/2017)</li>	
-<li>Curating and assimilating crowdsourced and authoritative data to reduce uncertainty in river flow modeling (RiverCure - FCT 29360/2017)</li>
+<li>MIning MUlti-source and MUlti-modal geo-referenced information (MIMU - FCT PTDC/CCI-CIF/32607/2017 - Principal Investigator)</li>
+<li>Discourse Analysis and Argumentation Mining from Text Sources (DARGMINTS - FCT 31460 - Co-Principal Investigator)</li>
+<li>Representativeness of social partners and the impact in economic governance (REP - FCT PTDC/SOC-SOC/29207/2017)</li>
+<li>Streams of hate and untruth? Using online comments, posts and tweets to investigate attitudes and the quality of political debates (HATE - FCT PTDC/CPO-CPO/28495/2017)</li>	
+<li>Curating and assimilating crowdsourced and authoritative data to reduce uncertainty in river flow modeling (RiverCure - FCT PTDC/CTA-OHR/29360/2017)</li>
 <li><a href="https://diggingintodata.org/awards/2016/project/digging-early-colonial-mexico">Digging into Early Colonial Mexico: A large-scale computational analysis of 16th century historical sources (DigCH - T-AP HJ-253525)</a></li>
 <li><a href="http://www.republicofletters.net">Reassembling the Republic of Letters (COST ACTION IS1310)</a></li>
 <li>Da monitorização de fluxos de dados globais à recomendação com base em contexto (GoLocal - FCT CMUP­ERI/TIC/0046/2014)</li>
@@ -587,10 +589,10 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Barbara Pinho, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/1972678479053871"><i>SleepData - A sleep disorders clinical database</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 18 valores -->
 			<li>Tiago Castanheira, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/565303595501663"><i>SleepData - A study on sleep disorders</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 18 valores -->
 			<li>Frederico Rodrigues, <a href=""><i>Neural Methods for Cross-Lingual Sentence Compression</i></a>, IST, 2018 (<i>co-supervised with Prof. Ricardo Ribeiro</i>)</li> <!-- 17 valores -->
+			<li>Miguel Vieira, <a href=""><i>Vigilância Epidemiológica de Eventos de Massas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 16 valores -->
 				
 			<li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> <!-- ?? valores -->
 			<li>Paulo Alves, <a href=""><i>Extracção de argumentos desde documentos textuais</i></a>, IST, 2018 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- ?? valores -->
-			<li>Miguel Vieira, <a href=""><i>Vigilância Epidemiológica de Eventos de Massas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
 			<li>Nuno Ramanlal, <a href=""><i>Atribuição automática de coordenadas geo-espaciais a fotos em arquivos históricos</i></a>, IST, 2018 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- ?? valores -->
 			<li>Bernardo Casaleiro, <a href=""><i>Desambiguação de etiquetas morfossintáticas com redes neuronais recorrentes e word embeddings</i></a>, IST, 2018 (<i>co-supervised with Prof. Nuno Mamede</i>)</li> <!-- ?? valores -->
 			<li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2018 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->
