--- a/index.html
+++ b/index.html
@@ -660,6 +660,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://www.sigapp.org/sac/sac2019/">SAC'19</a> |
 						<a href="https://dsaa2018.isi.it/program/special-sessions/en-geo-data">IEEE DSAA'18 - EnGeoData</a> |
 						<a href="http://www.spur.uzh.ch/de/veranstaltungen/workshops/2018/Corpus-in-GIScience-Going-Beyond-Butterfly-Collecting.html">Corpus in GIS Science</a> |
 						<a href="http://www.inf.ufrgs.br/propor-2018/">PROPOR'18</a> |
