--- a/index.html
+++ b/index.html
@@ -219,22 +219,22 @@ involved in several research projects related to geospatial aspects in informati
 	</tr>
     	<tr>
 		<td>
-			2018-2019 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TIS-IBiom/2018-2019/2-semestre">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
-			2018-2019 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PRI251795/2018-2019/1-semestre">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
+			2018/2019 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TIS-IBiom/2018-2019/2-semestre">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
+			2018/2019 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PRI251795/2018-2019/1-semestre">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
 			2018/2019 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIBD7/2018-2019/1-semestre">Information Systems and Databases</a> (IST,MEEC,MEBiom)<br/>
-			2017-2018 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TIS-IBiom/2017-2018/2-semestre">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
-			2017-2018 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/ADSI26/2017-2018/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,METI)<br/>
-			2017-2018 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PRI251795/2017-2018/1-semestre">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
+			2017/2018 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TIS-IBiom/2017-2018/2-semestre">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
+			2017/2018 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/ADSI26/2017-2018/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,METI)<br/>
+			2017/2018 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PRI251795/2017-2018/1-semestre">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
 			2017/2018 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD81795/2017-2018/1-semestre">Databases</a> (IST,LEIC,LETI)<br/>
 			2017/2018 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2017-2018/1-semestre">Research Topics</a> (IST,DEIC)<br/>
-			2016-2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TIS-IBiom/2016-2017/2-semestre">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
-			2016-2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/ADSI26/2016-2017/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,METI)<br/>
-			2016-2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PRI25179/2016-2017/1-semestre">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
+			2016/2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TIS-IBiom/2016-2017/2-semestre">Biomedical Informatics</a> (IST,MEIC,MEBiom)<br/>
+			2016/2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/ADSI26/2016-2017/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,METI)<br/>
+			2016/2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/PRI25179/2016-2017/1-semestre">Information Processing and Retrieval</a> (IST,MEIC,METI)<br/>
 			2016/2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf9/2016-2017/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
 			2016/2017 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv9/2016-2017/1-semestre">Research Topics</a> (IST,DEIC)<br/>
-			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIBD51113/2015-2016/2-semestre">Information Systems and Databases</a> (IST,LEGI)<br/>
-			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD101113/2015-2016/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,METI)<br/>
-			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2015-2016/1-semestre">Research Topics</a> (IST,DEIC)<br/>
+			2015/2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIBD51113/2015-2016/2-semestre">Information Systems and Databases</a> (IST,LEGI)<br/>
+			2015/2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD101113/2015-2016/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,METI)<br/>
+			2015/2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2015-2016/1-semestre">Research Topics</a> (IST,DEIC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RGI25/2014-2015/1-semestre">Information Processing and Retrieval</a> (IST,MEIC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD8/2014-2015/1-semestre">Databases</a> (IST,LEIC,LERC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/IBD-Ead/2014-2015/1-semestre">Introduction to Data Bases</a> (MISE)<br/>
@@ -245,7 +245,7 @@ involved in several research projects related to geospatial aspects in informati
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIG10/2013-2014/2-semestre">Systems for Geo-Referenced Information</a> (IST,MEIC)<br/>
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/IBD-Ead/2013-2014/1-semestre">Introduction to Data Bases</a> (MISE)<br/>
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2013-2014/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
-			2013-2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2013-2014/1-semestre">Research Topics</a> (IST,DEIC)<br/>			
+			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2013-2014/1-semestre">Research Topics</a> (IST,DEIC)<br/>			
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD4/2013-2014/1-semestre">Databases</a> (IST,LEIC,LERC)<br/>
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI22/2013-2014/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
 			2012/2013 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD7/2012-2013/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,MERC)<br/>
