--- a/index.html
+++ b/index.html
@@ -664,6 +664,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://aaai.org/Conferences/AAAI-19/">AAAI'19</a> |
 						<a href="http://ecir2019.org">ECIR'19</a> |
 						<a href="http://www.sigapp.org/sac/sac2019/">SAC'19</a> |
 						<a href="https://dsaa2018.isi.it/program/special-sessions/en-geo-data">IEEE DSAA'18 - EnGeoData</a> |
