--- a/index.html
+++ b/index.html
@@ -742,6 +742,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
+						<a href="https://www.journals.elsevier.com/applied-geography">Applied Geography</a> |
 						<a href="http://www.mdpi.com/journal/remotesensing">Remote Sensing</a> |
 						<a href="https://www.computer.org/web/tmc">Transactions on Mobile Computing</a> |						
 						<a href="https://link.springer.com/journal/10707">GeoInformatica</a> |
