--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ involved in several research projects related to geospatial aspects in informati
 		<td>
 			<ul>
 <li>MIning MUlti-source and MUlti-modal geo-referenced information (MIMU - FCT PTDC/CCI-CIF/32607/2017 - Principal Investigator)</li>
-<li>Discourse Analysis and Argumentation Mining from Text Sources (DARGMINTS - FCT 31460 - Co-Principal Investigator)</li>
+<li>Discourse Analysis and Argumentation Mining from Text Sources (DARGMINTS - FCT POCI/01/0145/FEDER/031460 - Co-Principal Investigator)</li>
 <li>Representativeness of social partners and the impact in economic governance (REP - FCT PTDC/SOC-SOC/29207/2017)</li>
 <li>Streams of hate and untruth? Using online comments, posts and tweets to investigate attitudes and the quality of political debates (HATE - FCT PTDC/CPO-CPO/28495/2017)</li>	
 <li>Curating and assimilating crowdsourced and authoritative data to reduce uncertainty in river flow modeling (RiverCure - FCT PTDC/CTA-OHR/29360/2017)</li>
