--- a/index.html
+++ b/index.html
@@ -621,6 +621,8 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Mário Reis, <a href=""><i>Delimitação de regiões geográficas e integração de dados para construção de gazetteers</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Veniamin Craciun, <a href=""><i>Sistema de Recomendação em Análise de Risco em Saúde Mental Pediátrica</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->				
 			<li>Jorge Pereira, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->	
+
+			<li>Ricardo Pascoal, <a href=""><i>Recomendação de candidatos a ofertas de emprego</i></a>, IST, 2019 (<i>co-supervised with Prof. João Paulo Carvalho</i>)</li> <!-- ?? valores -->	
 			</ul>
 		</td>
     </tr>
