--- a/index.html
+++ b/index.html
@@ -667,6 +667,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://sociocom.jp/~event/uistda2019/index.php">UISTDA'19</a> |
 						<a href="https://aaai.org/Conferences/AAAI-19/">AAAI'19</a> |
 						<a href="http://ecir2019.org">ECIR'19</a> |
 						<a href="http://www.sigapp.org/sac/sac2019/">SAC'19</a> |
