--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Book Chapters</h3>
 
 			<ul>
-
-<li>Mário Silva, Bruno Martins, and Miguel Costa. <i>Avaliação conjunta de recuperação de informação da Web portuguesa</i>, Chapter in Diana Saints (eds), Avaliação conjunta: um novo paradigma no processamento computacional da língua portuguesa, IST Press, 2006 [<a href="http://www.linguateca.pt/aval_conjunta/">book webpage</a>] </li>
-<li>Nuno Cardoso, Bruno Martins, Daniel Gomes, and Mário J. Silva. <i>WPT 03: a primeira colecção pública proveniente de uma recolha da web portuguesa</i>, Chapter in Diana Saints (eds), Avaliação conjunta: um novo paradigma no processamento computacional da língua portuguesa, IST Press, 2006 [<a href="http://www.linguateca.pt/aval_conjunta/">book webpage</a>] </li>
+<li>Raquel Rego, Miguel Won, Bruno Martins, Amália Mendes, Iria del Río, and Pierre Lejeune. <i>The crisis impact on the political discourse of Portuguese social partners</i>, Chapter in M. C. Lobo, F. C. da Silva, and J. P. Zúquete (eds), Changing Societies: Legacies and Challenge - Vol. ii. Citizenship in Crisis, Imprensa de Ciências Sociais, 2018 [<a href="https://doi.org/10.31447/ics9789726715047.07">PDF</a>] </li>
+<li>Mário Silva, Bruno Martins, and Miguel Costa. <i>Avaliação conjunta de recuperação de informação da Web portuguesa</i>, Chapter in Diana Santos (eds), Avaliação conjunta: um novo paradigma no processamento computacional da língua portuguesa, IST Press, 2006 [<a href="http://www.linguateca.pt/aval_conjunta/">book webpage</a>] </li>
+<li>Nuno Cardoso, Bruno Martins, Daniel Gomes, and Mário J. Silva. <i>WPT 03: a primeira colecção pública proveniente de uma recolha da web portuguesa</i>, Chapter in Diana Santos (eds), Avaliação conjunta: um novo paradigma no processamento computacional da língua portuguesa, IST Press, 2006 [<a href="http://www.linguateca.pt/aval_conjunta/">book webpage</a>] </li>
 
 			</ul> 
 
@@ -667,6 +667,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://dh2019.adho.org/">DH'19</a> |
 						<a href="http://sociocom.jp/~event/uistda2019/index.php">UISTDA'19</a> |
 						<a href="https://aaai.org/Conferences/AAAI-19/">AAAI'19</a> |
 						<a href="http://ecir2019.org">ECIR'19</a> |
