--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
+<li>Luís Borges, Bruno Martins, and Pavel Calado <i>Combining Similarity Features and Deep Representation Learning for Automatic Stance Detection]{Combining Similarity Features and Deep Representation Learning for Stance Detection in the Context of Checking Fake News</i>, ACM Journal of Data and Information Quality, 2018 [<a href="">PDF</a>]</li>
 <li>Francisco Duarte, Bruno Martins, Cátia Sousa Pinto, and Mário J. Silva <i>Deep Neural Models for ICD-10 Coding of Death Certificates and Autopsy Reports in Free-Text</i>, Journal of Biomedical Informatics, 2018 [<a href="https://doi.org/10.1016/j.jbi.2018.02.011">PDF</a>]</li>
 <li>Miguel Won, Patricia Murrieta-Flores, and Bruno Martins <i>Ensemble NER: Evaluating Named Entity Recognition Tools in the Identification of Place Names in Historical Corpora</i>, Frontiers in Digital Humanities, 2018 [<a href="https://www.frontiersin.org/articles/10.3389/fdigh.2018.00002/abstract">PDF</a>]</li>	
 <li>João Monteiro, Bruno Martins, and João M. Pires <i>A Hybrid Approach for the Spatial Disaggregation of Socio-Economic Indicators</i>, International Journal of Data Science and Analytics, 2018 [<a href="http://dx.doi.org/10.1007/s41060-017-0080-z">PDF</a>]</li>
