--- a/index.html
+++ b/index.html
@@ -594,6 +594,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Tiago Castanheira, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/565303595501663"><i>SleepData - A study on sleep disorders</i></a>, IST, 2017 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 18 valores -->
 			<li>Frederico Rodrigues, <a href=""><i>Neural Methods for Cross-Lingual Sentence Compression</i></a>, IST, 2018 (<i>co-supervised with Prof. Ricardo Ribeiro</i>)</li> <!-- 17 valores -->
 			<li>Miguel Vieira, <a href=""><i>Vigilância Epidemiológica de Eventos de Massas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- 16 valores -->
+			<li>Alexandre Marinho, <a href=""><i>String matching e detecção de duplicados com técnicas de deep learning</i></a>, IST, 2018 (<i>co-supervised with Prof. Pavel Calado</i>)</li> <!-- 17 valores -->
 				
 			<li>Paulo Alves, <a href=""><i>Extracção de argumentos desde documentos textuais</i></a>, IST, 2018 (<i>co-supervised with Dr. Miguel Won</i>)</li> <!-- 18 valores -->
 			<li>Nuno Ramanlal, <a href=""><i>Atribuição automática de coordenadas geo-espaciais a fotos em arquivos históricos</i></a>, IST, 2018 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- 16 valores -->
@@ -605,7 +606,6 @@ involved in several research projects related to geospatial aspects in informati
 			
 			<li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> <!-- ?? valores -->
 			<li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2018 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->
-			<li>Alexandre Marinho, <a href=""><i>String matching e detecção de duplicados com técnicas de deep learning</i></a>, IST, 2018 (<i>co-supervised with Prof. Pavel Calado</i>)</li> <!-- ?? valores -->
 			<li>Duarte Pompeu, <a href=""><i>Classificação automática de lendas e mitos populares</i></a>, IST, 2018 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
 			<li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
 			<li>Luis Santos, <a href=""><i>Named Entity Recognition over Historical Documents</i></a>, IST, 2018 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
