--- a/index.html
+++ b/index.html
@@ -639,12 +639,13 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="http://lxmls.it.pt/">LxMLS'19</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'18</a> |
-						<a href="http://lxmls.it.pt/">LxMLS'18</a> |
+						<a href="http://lxmls.it.pt/2018/">LxMLS'18</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/2017/">SIGSPATIAL GeoHumanities'17</a> |
-						<a href="http://lxmls.it.pt/">LxMLS'17</a> |
+						<a href="http://lxmls.it.pt/2017/">LxMLS'17</a> |
 						<a href="">TeMA'17</a> |
-						<a href="http://lxmls.it.pt/">LxMLS'16</a> |
+						<a href="http://lxmls.it.pt/2016/">LxMLS'16</a> |
 						<a href="http://dhere.de/locweb2016/">LocWeb'16</a> |
 						<a href="http://emnlp2015.emnlp.org/">EMNLP'15</a> |
 						<a href="http://dhere.de/locweb2015/">LocWeb'15</a> |
@@ -659,8 +660,9 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="http://theholmoak.com/journal/vgi">Volunteered Geographic Information - Thematic Issue</a> |
 						<a href="">GeoJournal - Special Issue on Spatial Humanities</a> |
 						<a href="http://explore.tandfonline.com/pages/cfp/tgis-spatial-computing-3q2017?utm_source=CPB&utm_medium=cms&utm_campaign=JMG01510">International Journal of Geographical Information Science - Special Issue on Spatial Computing for the Digital Humanities</a> |
-						<a href="http://www.mdpi.com/journal/information/editors/">Information</a> |
 						<a href="http://www.springer.com/cda/content/document/cda_downloaddocument/SI_Environmental+and+Geospatial+Data+Analytics.pdf?SGWID=0-0-45-1578169-p177383280">International Journal of Data Science and Analytics - Special Issue on Environmental and Geospatial Data Analytics</a>
+						<a href="http://linguamatica.com/index.php/linguamatica/about/editorialTeam">Linguamática</a> |
+						<a href="http://www.mdpi.com/journal/information/editors/">Information</a> |
 					</li></ul>
 					</td>
 				</tr>
@@ -668,36 +670,37 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://sites.google.com/site/socialnlp2019/">SocialNLP'19</a> |
 						<a href="http://dh2019.adho.org/">DH'19</a> |
 						<a href="http://sociocom.jp/~event/uistda2019/index.php">UISTDA'19</a> |
-						<a href="https://aaai.org/Conferences/AAAI-19/">AAAI'19</a> |
+						<a href="http:/aaai.org/Conferences/AAAI-19/">AAAI'19</a> |
 						<a href="http://ecir2019.org">ECIR'19</a> |
 						<a href="http://www.sigapp.org/sac/sac2019/">SAC'19</a> |
-						<a href="https://dsaa2018.isi.it/program/special-sessions/en-geo-data">IEEE DSAA'18 - EnGeoData</a> |
+						<a href="http://dsaa2018.isi.it/program/special-sessions/en-geo-data">IEEE DSAA'18 - EnGeoData</a> |
 						<a href="http://www.spur.uzh.ch/de/veranstaltungen/workshops/2018/Corpus-in-GIScience-Going-Beyond-Butterfly-Collecting.html">Corpus in GIS Science</a> |
 						<a href="http://www.inf.ufrgs.br/propor-2018/">PROPOR'18</a> |
 						<a href="http://emnlp2018.org">EMNLP'18</a> |
-						<a href="https://udi.ornl.gov/geoai">GeoAI'18</a> |
+						<a href="http://udi.ornl.gov/geoai">GeoAI'18</a> |
 						<a href="http://www.geo.uzh.ch/~rsp/gir18/">GIR'18</a> |
 						<a href="http://sigspatial2018.sigspatial.org">SIGSPATIAL'18</a> |
 						<a href="http://www.tpdl.eu/tpdl2018/">TPDL'18</a> |
 						<a href="http://www.kdd.org/kdd2018/">KDD'18</a> |
-						<a href="https://wosp.core.ac.uk/lrec2018/">WOSP'18</a> |
-						<a href="https://sites.google.com/view/trac1/home">TRAC'18</a> |
+						<a href="http://wosp.core.ac.uk/lrec2018/">WOSP'18</a> |
+						<a href="http://sites.google.com/view/trac1/home">TRAC'18</a> |
 						<a href="http://www.lac.inpe.br/ST-Analytics/">ST-Analytics'18</a> |
-						<a href="https://spatial-language.github.io/">SpLU'18</a> |
+						<a href="http://spatial-language.github.io/">SpLU'18</a> |
 						<a href="http://acl2018.org">ACL'18</a> |
 						<a href="http://naacl2018.org">NAACL-HLT'18</a> |
-						<a href="https://dh2018.adho.org/en/">DH'18</a> |
+						<a href="http://dh2018.adho.org/en/">DH'18</a> |
 						<a href="http://www.ijcai-18.org">IJCAI-ECAI'18</a> |
 						<a href="http://dhere.de/locweb2018/">LocWeb'18</a> |
 						<a href="http://text2story18.inesctec.pt">Text2Story'18</a> |
-						<a href="https://sites.google.com/site/socialnlp2018/">SocialNLP'18</a> |
+						<a href="http://sites.google.com/site/socialnlp2018/">SocialNLP'18</a> |
 						<a href="http://sociocom.jp/~event/uistda2018/index.php">UISTDA'18</a> |
 						<!-- <a href="http://www.ichmi.org/">ICMHI'18</a> | -->
-						<a href="https://www.ecir2018.org">ECIR'18</a> |
-						<a href="https://agile-online.org/index.php/home-2018">AGILE'18</a> |
-						<a href="https://w2gis2018.lbd.org.es">W2GIS'18</a> |
+						<a href="http://www.ecir2018.org">ECIR'18</a> |
+						<a href="http://agile-online.org/index.php/home-2018">AGILE'18</a> |
+						<a href="http://w2gis2018.lbd.org.es">W2GIS'18</a> |
 						<a href="http://www.aaai.org/Conferences/AAAI/2018/aaai18call.php">AAAI'18</a> |
 						<a href="http://www.sigapp.org/sac/sac2018/">SAC'18</a> |
 						<a href="http://www.dslab.it.aoyama.ac.jp/dsaa2017/specialsessions/#EnGeoData">IEEE DSAA'17 - EnGeoData</a> |
@@ -706,26 +709,26 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="http://sigspatial2017.sigspatial.org">SIGSPATIAL'17</a> |
 						<a href="http://www.graphicslink.co.uk/IV2017/GVA.htm">IV-GVA 2017</a> |
 						<a href="http://sphinxworkshop.org">SPHINx 2017</a> |
-						<a href="https://wosp.core.ac.uk/jcdl2017/">WOSP'17</a> |
+						<a href="http://wosp.core.ac.uk/jcdl2017/">WOSP'17</a> |
 						<a href="http://ijcai-17.org">IJCAI'17</a> |
-						<a href="https://sites.google.com/site/socialnlp2017/">SocialNLP'17</a> |
+						<a href="http://sites.google.com/site/socialnlp2017/">SocialNLP'17</a> |
 						<a href="http://emnlp2017.net">EMNLP'17</a> |
 						<a href="http://www.efita2017.org/">EFITA'17</a> |
 						<a href="http://www.tpdl.eu/tpdl2017/">TPDL'17</a> |
 						<a href="http://dhere.de/locweb2017/">LocWeb'17</a> |
 						<a href="http://2017.jcdl.org">JCDL'17</a> |
-						<a href="https://dh2017.adho.org">DH'17</a> |
-						<a href="https://agile-online.org/index.php/conference/conference-2017">AGILE'17</a> |
-						<a href="https://ornlcda.github.io/SWM2017/">SWM'17</a> |
+						<a href="http://dh2017.adho.org">DH'17</a> |
+						<a href="http://agile-online.org/index.php/conference/conference-2017">AGILE'17</a> |
+						<a href="http://ornlcda.github.io/SWM2017/">SWM'17</a> |
 						<a href="http://ecir2017.org">ECIR'17</a> |
 						<a href="http://cis.csi.cuny.edu/sac/SWA2017/">SAC'17</a> |
 						<a href="http://cikm2016.cs.iupui.edu">CIKM'16</a> |
 						<a href="http://www.geo.uzh.ch/~rsp/gir16/">GIR'16</a> |
-						<a href="https://www.ualberta.ca/~dsaa16/">IEEE DSAA'16 - EnGeoData</a> |
+						<a href="http://www.ualberta.ca/~dsaa16/">IEEE DSAA'16 - EnGeoData</a> |
 						<a href="http://sigspatial2016.sigspatial.org">SIGSPATIAL'16</a> |
 						<a href="http://www.emnlp2016.net">EMNLP'16</a> |
 						<a href="http://optima.jrc.it/wassa2016/">WASSA'16</a> |
-						<a href="https://wosp.core.ac.uk/jcdl2016/">WOSP'16</a> |
+						<a href="http://wosp.core.ac.uk/jcdl2016/">WOSP'16</a> |
 						<a href="http://www.tpdl2016.org">TPDL’16</a> |
 						<a href="http://inforum.org.pt/INForum2016">INForum’16</a> |
 						<!-- 
@@ -733,7 +736,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="http://www.iaria.org/conferences2016/eKNOW16.html">eKNOW'16</a> |
 						-->
 						<a href="http://www.jcdl2016.org">JCDL'16</a> |
-						<a href="https://sites.google.com/site/socialnlp2016/">SocialNLP'16</a> |
+						<a href="http://sites.google.com/site/socialnlp2016/">SocialNLP'16</a> |
 						<a href="http://www.agile-online.org/index.php/conference/conference-2016">AGILE'16</a> |
 						<a href="http://ecir2016.dei.unipd.it">ECIR'16</a> |
 						<a href="http://www.acm.org/conferences/sac/sac2016/">SAC'16</a> |
@@ -748,11 +751,11 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Reviewer in international journals: </strong>
-						<a href="https://www.journals.elsevier.com/applied-geography">Applied Geography</a> |
+						<a href="http://www.journals.elsevier.com/applied-geography">Applied Geography</a> |
 						<a href="http://www.mdpi.com/journal/remotesensing">Remote Sensing</a> |
-						<a href="https://www.computer.org/web/tmc">Transactions on Mobile Computing</a> |						
-						<a href="https://link.springer.com/journal/10707">GeoInformatica</a> |
-						<a href="https://www.cambridge.org/core/journals/natural-language-engineering">Journal of Natural Language Engineering</a> |
+						<a href="http://www.computer.org/web/tmc">Transactions on Mobile Computing</a> |						
+						<a href="http://link.springer.com/journal/10707">GeoInformatica</a> |
+						<a href="http://www.cambridge.org/core/journals/natural-language-engineering">Journal of Natural Language Engineering</a> |
 						<a href="http://www.mdpi.com/journal/algorithms">Algorithms</a> |
 						<a href="http://www.emeraldinsight.com/loi/prog">Program</a> |
 						<a href="http://onlinelibrary.wiley.com/journal/10.1111/(ISSN)1468-0394">Expert Systems</a> |						
