--- a/index.html
+++ b/index.html
@@ -486,6 +486,7 @@ involved in several research projects related to geospatial aspects in informati
     <tr>
 		<td>
 			<ul>
+<li>Asistentes Inteligentes para las Infraestructuras de Datos Espaciales (IDEAIS - Red CYTED)</li>
 <li>MIning MUlti-source and MUlti-modal geo-referenced information (MIMU - FCT PTDC/CCI-CIF/32607/2017 - Principal Investigator)</li>
 <li>Discourse Analysis and Argumentation Mining from Text Sources (DARGMINTS - FCT POCI/01/0145/FEDER/031460 - Co-Principal Investigator)</li>
 <li>Representativeness of social partners and the impact in economic governance (REP - FCT PTDC/SOC-SOC/29207/2017)</li>
