--- a/index.html
+++ b/index.html
@@ -672,6 +672,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://text2story18.inesctec.pt">Text2Story'19</a> |
 						<a href="http://sites.google.com/site/socialnlp2019/">SocialNLP'19</a> |
 						<a href="http://dh2019.adho.org/">DH'19</a> |
 						<a href="http://sociocom.jp/~event/uistda2019/index.php">UISTDA'19</a> |
