--- a/index.html
+++ b/index.html
@@ -642,6 +642,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="">ECIR'20</a> |
 						<a href="http://lxmls.it.pt/">LxMLS'19</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'18</a> |
 						<a href="http://lxmls.it.pt/2018/">LxMLS'18</a> |
