--- a/index.html
+++ b/index.html
@@ -835,12 +835,12 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="DEI-ANDRE-PROJECTO">Inês Ferreira</a> |
 						<a href="DEI-LUISA-PROJECTO">Ricardo Rei</a> |
 						
-						<a href="DEI-AMARQUES-PROJECTO">Rui Santos</a> |
-						<a href="DEI-DIOGO-PROJECTO">João Vicente</a> |
-						<a href="DEI-LUISA-PROJECTO">Margarida Correia</a> |
-						<a href="DEI-PAVEL-PROJECTO">Ricardo Pereira</a> |
-						<a href="DEI-LUISA">Miguel Ângelo Ventura</a> |												
-						
+						<a href="FCTUNL-JOAO">Gonçalo Marcelino</a> |
+						<a href="DEI-ALVESMARQUES">Rui Santos</a> |
+						<a href="DEI-DIOGO">João Vicente</a> |
+						<a href="DEI-LUISA">Margarida Correia</a> |
+						<a href="DEI-PAVEL">Ricardo Pereira</a> |
+						<a href="DEI-LUISA">Miguel Ângelo Ventura</a> |																		
 						<a href="DEEC">Pedro Ferreira</a> |
 						<a href="DEI-MAMEDE-PROJECTO">Valentyn Hulevych</a> |
 						<a href="DEEC-JCARVALHO-RAMON">João Pedro Lages</a> |
