--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="http://ijcai19.org">IJCAI'19</a> |
 						<a href="http://ach2019.ach.org">ACH'19</a> |
 						<a href="http://epia2019.utad.pt">EPIA'19</a> |
 						<a href="http://text2story18.inesctec.pt">Text2Story'19</a> |
