--- a/index.html
+++ b/index.html
@@ -605,8 +605,9 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Nuno Ramanlal, <a href=""><i>Atribuição automática de coordenadas geo-espaciais a fotos em arquivos históricos</i></a>, IST, 2018 (<i>co-supervised with Prof. Patricia Murrieta-Flores</i>)</li> <!-- 17 valores -->
 			<li>Rafael Miranda, <a href=""><i>Deep learning para classificação automática de notas de alta hospitalar segundo códigos ICD10</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- 18 valores -->
 			
-			<li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> <!-- ?? valores -->
-			<li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2018 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->
+			<!-- <li>Valter Matos, <a href=""><i>Resolução de Entidades Duplicadas Através da Combinação de Medidas de Similaridade</i></a>, IST, 2018</li> --><!-- ?? valores -->
+			<!-- <li>Mário Reis, <a href=""><i>Delimitação de regiões geográficas e integração de dados para construção de gazetteers</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->				
+			<!-- <li>Luís Freixinho, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2018 (<i>co-supervised with Prof. João Moura Pires</i>)</li> --> <!-- ?? valores -->
 			<li>Duarte Pompeu, <a href=""><i>Classificação automática de lendas e mitos populares</i></a>, IST, 2018 (<i>co-supervised with Prof. David Matos</i>)</li> <!-- ?? valores -->
 			<li>Daniel Botas, <a href=""><i>Prospecção de informação em bases de dados de prescrições electrónicas</i></a>, IST, 2018 (<i>co-supervised with Prof. Mário Silva</i>)</li> <!-- ?? valores -->
 			<li>Luis Santos, <a href=""><i>Named Entity Recognition over Historical Documents</i></a>, IST, 2018 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- ?? valores -->
@@ -620,7 +621,6 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Manuel Santos, <a href=""><i>Deep learning methods for document relevance ranking in the context of search engines for legal/legislative contents</i></a>, IST, 2019 (<i>co-supervised with Prof. Pável Calado</i>)</li> <!-- ?? valores -->
 			<li>Pedro Gomes, <a href=""><i>Processing query logs for identifying user sessions</i></a>, IST, 2019 (<i>co-supervised with Luís Borges</i>)</li> <!-- ?? valores -->
 			<li>Pedro Caldeira, <a href=""><i>Reconhecimento e desambiguação de entidades em textos clínicos</i></a>, IST, 2019 (<i>co-supervised with Prof. Mário J. Silva</i>)</li> <!-- ?? valores -->
-			<li>Mário Reis, <a href=""><i>Delimitação de regiões geográficas e integração de dados para construção de gazetteers</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Veniamin Craciun, <a href=""><i>Sistema de Recomendação em Análise de Risco em Saúde Mental Pediátrica</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->				
 			<li>Jorge Pereira, <a href=""><i>Uso de redes neuronais profundas para classificação do território combinando imagens de satélite e fotos geo-referenciadas</i></a>, IST, 2019 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->	
 
