--- a/index.html
+++ b/index.html
@@ -627,6 +627,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Ricardo Pascoal, <a href=""><i>Recomendação de candidatos a ofertas de emprego</i></a>, IST, 2019 (<i>co-supervised with Prof. João Paulo Carvalho</i>)</li> <!-- ?? valores -->	
 			<li>Didier Dias, <a href=""><i>Classificação de solos com técnicas de aprendizagem automática</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->	
 			<li>Tiago Conceicao, <a href=""><i>Uso de redes neuronais profundas para classificação do terreno</i></a>, FCT/UNL, 2019 (<i>co-supervised with Prof. João Moura Pires</i>)</li> <!-- ?? valores -->	
+			<li>Adriana Pereira, <a href=""><i>Prospecção de argumentos em texto</i></a>, IST, 2019 (<i>co-supervised with Prof. Henrique Lopes Cardoso</i>)</li> <!-- ?? valores -->	
 			</ul>
 		</td>
     </tr>
