--- a/index.html
+++ b/index.html
@@ -835,6 +835,11 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEI-SOFIA-PROJECTO">João Simão</a> |
+						<a href="DEI-LOPES-PROJECTO">Gonçalo Lopes</a> |
+						<a href="DEI-DAVID-PROJECTO">David Calhas</a> |
+						<a href="DEI-DAVID-PROJECTO">João Raposo</a> |
+
 						<a href="DEI-ANDRE-PROJECTO">Inês Ferreira</a> |
 						<a href="DEI-LUISA-PROJECTO">Ricardo Rei</a> |
 						
