--- a/index.html
+++ b/index.html
@@ -675,6 +675,8 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://splu-robonlp.github.io">SpLU-RoboNLP 2019</a> |
+						<a href="http://www.kdd.org/kdd2019/">KDD'19</a> |
 						<a href="http://dhere.de/locweb/">LocWeb'19</a> |
 						<a href="http://ijcai19.org">IJCAI'19</a> |
 						<a href="http://ach2019.ach.org">ACH'19</a> |
